--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- Patička -->
     <div class="footer">
-        <p>Tuto stránku naprogramoval pomocí HTML a CSS Klimondra v roce 2023.  Stránka nesbírá žádná uživatelská data.</p>
+        <p class="patickatext">Tuto stránku naprogramoval pomocí HTML a CSS Klimondra v roce 2023.  Stránka nesbírá žádná uživatelská data.</p>
     </div>
     
     
