--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
               </script>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <!-- LANDING PAGE VIDEO -->
