--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
     <!-- NAVIGACE -->
 
-    <nav>
-        <ul class="navigace">
-            <li><a href="index.html">Domů</a></li>
-            <li><a href="projekty.html">Projekty</a></li>
-            <li><a href="#" onclick="scrollToClass(event, 'odkazypresmerovani')">Sociální sítě</a></li>
+    <nav class="navbar">
+        <ul class="navigace nam-menu">
+            <li class="nav-item"><a href="index.html" class="nav-link">Domů</a></li>
+            <li class="nav-item"><a href="projekty.html" class="nav-link">Projekty</a></li>
+            <li class="nav-item"><a href="#" onclick="scrollToClass(event, 'odkazypresmerovani')" class="nav-link">Sociální sítě</a></li>
             <script>
                 function scrollToClass(event, className) {
                   event.preventDefault();
@@ -41,7 +41,7 @@
                   window.scrollTo({ top: y, left: 0, behavior: 'smooth' });
                 }
               </script>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li class="nav-item"><a href="kontakt.html" class="nav-link">Kontakt</a></li>
         </ul>
         <div class="hamburger">
             <span class="bar"></span>
