--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         </div>
     </nav>
 
+    <script src="script.js"></script>
+
     <!-- LANDING PAGE VIDEO -->
 <div class="hlavniVideo">
     <!-- Video element -->
