--- a/projekty.html
+++ b/projekty.html
@@ -11,16 +11,22 @@
 </head>
 <body>
 
-    <!-- Navigace -->
+     <!-- NAVIGACE -->
+<nav class="navbar">
+    <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+    <ul class="navigace nam-menu">
+        <li class="nav-item"><a href="index.html" class="nav-link">Domů</a></li>
+        <li class="nav-item"><a href="projekty.html" class="nav-link">Projekty</a></li>
+        <li class="nav-item"><a href="index.html#social-media" class="nav-link">Sociální sítě</a></li>
+        <li class="nav-item"><a href="kontakt.html" class="nav-link">Kontakt</a></li>
+    </ul>
 
-    <nav>
-        <ul class="navigace">
-            <li><a href="index.html">Domů</a></li>
-            <li><a href="projekty.html">Projekty</a></li>
-            <li><a href="index.html#social_media">Sociální sítě</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
-    </nav>
+</nav>
+<script src="script.js"></script>
 
     <!-- Nadpisy -->
 
