--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             <a href="https://twitter.com/klimondracz" class="fa twitter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.tiktok.com/@klimondracz" class="fa tiktok" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-tiktok"></i></a>
             <a href="https://github.com/Klimondra" class="fa github" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+            <br class="mezeraMeziSitemi">
             <a href="https://discord.gg/uSVxYPyKRN" class="fa discord" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
             <a href="https://www.twitch.tv/klimondra" class="fa twitch" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitch"></i></a>
             <a href="https://steamcommunity.com/id/klimondra/" class="fa steam" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-steam"></i></a>        </div>
