--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="kontakt">
         <h1>Kontaktuj mě zde!</h1>
         <h2>Ať už potřebuješ s něčím pomoci, nebo chceš pokecat můžeš mi zde napsat! <br>Samozřejmě mi můžeš napsat na některou z mých sociálních sítí</h2>
-        <div class="kontaktkontejner"><button><a href="#"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>  Kontakt</a></button></div>
+        <div class="kontaktkontejner"><button><a href="kontakt.html"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>  Kontakt</a></button></div>
     </div>
 
     <!-- Patička -->
