--- a/index.html
+++ b/index.html
@@ -85,15 +85,16 @@
     <div class="sledujme">
         <h1>Na těchto sítích mě můžeš sledovat!</h1>
         <div class="odkazy">
+        <div>
             <a href="https://www.instagram.com/klimondra/" class="fa instagram" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://twitter.com/klimondracz" class="fa twitter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.tiktok.com/@klimondracz" class="fa tiktok" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-tiktok"></i></a>
             <a href="https://github.com/Klimondra" class="fa github" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-            <br>
             <a href="https://discord.gg/uSVxYPyKRN" class="fa discord" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
             <a href="https://www.twitch.tv/klimondra" class="fa twitch" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitch"></i></a>
             <a href="https://steamcommunity.com/id/klimondra/" class="fa steam" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-steam"></i></a>        </div>
-    </div>
+        </div>
+        </div>
 
     <!-- Kontaktuj mě-->
 
