--- a/projekty.html
+++ b/projekty.html
@@ -38,7 +38,16 @@
     <!-- Soubory S Projekty -->
 
     <div class="souborySProjekty">
-        <h1>Zatím tu teda nic není, <br>zkus se sem podívat někdy jindy</h1>
+        <!-- <h1>Zatím tu teda nic není, <br>zkus se sem podívat někdy jindy</h1> -->
+        <div class="poznamky">
+            <h1>Poznámkový blok</h1>
+            <p>Tenhle poznámkový blok na rovinu opravdu nic speciálního neumí, ale dělal jsem ho sám.<br>A ještě k tomu aplikace funguje zatím jen na Windows ale třeba se to v budoucnu změní.</p>
+            <div class="navodKeStazeni">
+                <p>Návod ke stažení: 1. Stáhněte si .zip soubor z této stránky. 2. Extrahujte .zip soubor v místě kde ho chcete mít. <br>3. Spusťte Poznamky.exe a užívejte si ukládání poznámek!<br>Aplikace neobsahuje žádné viry, malware ani žádné podobné škodlivé kódy. Pokud mi nevěříte, běžte na <a href="https://www.virustotal.com/" target="_blank">Virustotal.com</a> kde bude soubor proskenován.</p>
+            </div>
+            <button><a href="downloadFiles/PoznamkovyBlok.zip" download="PoznamkovyBlok.zip">Stáhnout zde!</a></button>
+        
+        </div>
     </div>
 
     <!-- Patička -->
