--- a/projekty.html
+++ b/projekty.html
@@ -46,6 +46,14 @@
                 <p>Návod ke stažení: 1. Stáhněte si .zip soubor z této stránky. 2. Extrahujte .zip soubor v místě kde ho chcete mít. <br>3. Spusťte Poznamky.exe a užívejte si ukládání poznámek!<br>Aplikace neobsahuje žádné viry, malware ani žádné podobné škodlivé kódy. Pokud mi nevěříte, běžte na <a href="https://www.virustotal.com/" target="_blank">Virustotal.com</a> kde bude soubor proskenován.</p>
             </div>
             <button><a href="downloadFiles/PoznamkovyBlok.zip" download="PoznamkovyBlok.zip">Stáhnout zde!</a></button>
+
+            <div class="poznamky">
+            <h1>Hra beze jména</h1>
+            <p>Je to klasicka skakacka ktera neni zajimava<br>Hra nebude dostavat updaty (Pravděpodobně)</p>
+            <div class="navodKeStazeni">
+                <p>Návod ke stažení: 1. Stáhněte si .zip soubor z této stránky. 2. Extrahujte .zip soubor v místě kde ho chcete mít. <br>3. Spusťte Test projekt.exe a užívejte si hruk!<br>Aplikace neobsahuje žádné viry, malware ani žádné podobné škodlivé kódy. Pokud mi nevěříte, běžte na <a href="https://www.virustotal.com/" target="_blank">Virustotal.com</a> kde bude soubor proskenován.</p>
+            </div>
+            <button><a href="downloadFiles/HraBezeJmena.zip" download="HraBezeJmena.zip">Stáhnout zde!</a></button>
         
         </div>
     </div>
