--- a/projekty.html
+++ b/projekty.html
@@ -47,7 +47,7 @@
             </div>
             <button><a href="downloadFiles/PoznamkovyBlok.zip" download="PoznamkovyBlok.zip">Stáhnout zde!</a></button>
 
-            <div class="poznamky">
+            <div class="projekt">
             <h1>Hra beze jména</h1>
             <p>Je to klasicka skakacka ktera neni zajimava<br>Hra nebude dostavat updaty (Pravděpodobně)</p>
             <div class="navodKeStazeni">
