--- a/projekty.html
+++ b/projekty.html
@@ -47,7 +47,7 @@
             </div>
             <button><a href="downloadFiles/PoznamkovyBlok.zip" download="PoznamkovyBlok.zip">Stáhnout zde!</a></button>
 
-            <iframe width="552" height="167" frameborder="0" src="https://itch.io/embed/2267754"><a href="https://klimondra.itch.io/hrabezejmena">HraBezeJmena by Klimondra</a></iframe>
+            <iframe width="552" height="167" frameborder="0" src="https://itch.io/embed/2267754" class="iframeProjekt"><a href="https://klimondra.itch.io/hrabezejmena">HraBezeJmena by Klimondra</a></iframe>
         
         </div>
     </div>
