--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1 class="kdoVlastneJsem">Kdo vlastně jsem?</h1>
         <div class="obsahKdoJsem">
             <div class="levyBlok">
-                <h1 class="kdoJsemNadpisClanku">Jsem člověk kterého baví<br>IT a programování</h1>
+                <h1 class="kdoJsemNadpisClanku">Jsem Člověk kterého baví<br>IT a programování</h1>
                 <div class="odkazypresmerovani"></div>
                 <p>Ani nevim jak dlouho se vlastně tomuhle věnuji ale hlavní podle mě je, že mě to baví. Zkouším například dělat hry v Unity a pokud toto čtete tak jsem dokázal vytvořit nějakou jednoduchou webovou stránku. Taky mě zajímá video tvorba ale s tím na internet nelezu. Pokud vás zajímá něco z mé tvorby můžete se podívat tady do projektů</p>
             </div>
