Smazání starých souborů

--- a/index.html
+++ b/index.html
@@ -2,113 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://kit.fontawesome.com/2fe6cb1a76.js" crossorigin="anonymous"></script>
-    <title>Klimondrův Web</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <script>
-        window.onload = function() {
-            // Zkontrolujeme, zda se v URL adrese nachází identifikátor "#navigovat_na_tridu"
-            if (window.location.href.includes("#social_media")) {
-                var cilovaTrida = document.querySelector('.odkazypresmerovani');
-                if (cilovaTrida) {
-                    cilovaTrida.scrollIntoView(); // Přesune stránku na prvek s třídou "cilova_trida"
-                }
-            }
-        };
-    </script>
-
-    <!-- NAVIGACE -->
-<nav class="navbar">
-    <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </div>
-    <ul class="navigace nam-menu">
-        <li class="nav-item"><a href="index.html" class="nav-link">Domů</a></li>
-        <li class="nav-item"><a href="projekty.html" class="nav-link">Projekty</a></li>
-        <li class="nav-item"><a href="#" onclick="scrollToClass(event, 'odkazypresmerovani')" class="nav-link">Sociální sítě</a></li>
-        <li class="nav-item"><a href="kontakt.html" class="nav-link">Kontakt</a></li>
-    </ul>
-    <script>
-        function scrollToClass(event, className) {
-            event.preventDefault();
-
-            const element = document.querySelector('.' + className);
-            const yOffset = -80; // Posunutí (můžete upravit podle potřeby)
-            const y = element.getBoundingClientRect().top + window.pageYOffset + yOffset;
-
-            window.scrollTo({ top: y, left: 0, behavior: 'smooth' });
-        }
-    </script>
-</nav>
-<script src="script.js"></script>
-
-    <!-- LANDING PAGE VIDEO -->
-<div class="hlavniVideo">
-    <!-- Video element -->
-    <video id="fullscreen-video" autoplay muted>
-      <source src="media/videonahomepage.webm" type="video/webm">
-    </video>
-  
-    <!-- Div pro zobrazení obrázku po skončení videa -->
-    <div id="end-image" class="image"></div>
-  
-    <script src="videoscript.js"></script>
-  </div>
-  
-
-    <!-- KDO JSEM -->
-
-    <div class="kdoJsem">
-        <h1 class="kdoVlastneJsem">Kdo vlastně jsem?</h1>
-        <div class="obsahKdoJsem">
-            <div class="levyBlok">
-                <h1 class="kdoJsemNadpisClanku">Jsem Člověk kterého baví<br>IT a programování</h1>
-                <div class="odkazypresmerovani"></div>
-                <p>Ani nevim jak dlouho se vlastně tomuhle věnuji ale hlavní podle mě je, že mě to baví. Zkouším například dělat hry v Unity a pokud toto čtete tak jsem dokázal vytvořit nějakou jednoduchou webovou stránku. Taky mě zajímá video tvorba ale s tím na internet nelezu. Pokud vás zajímá něco z mé tvorby můžete se podívat tady do projektů</p>
-            </div>
-            <div class="pravyBlok">
-                <img src="media/kdojsempictue.png" alt="Nějaký fotky">
-            </div>
-        </div>
-    </div>
-
-    <!-- SLEDUJ MĚ-->
-
-    <div class="sledujme">
-        <h1>Na těchto sítích mě můžeš sledovat!</h1>
-        <div class="odkazy">
-        <div>
-            <a href="https://www.instagram.com/klimondra/" class="fa instagram" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/klimondracz" class="fa twitter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.tiktok.com/@klimondracz" class="fa tiktok" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-tiktok"></i></a>
-            <a href="https://github.com/Klimondra" class="fa github" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-            <a href="https://discord.gg/uSVxYPyKRN" class="fa discord" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
-            <a href="https://www.twitch.tv/klimondra" class="fa twitch" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitch"></i></a>
-            <a href="https://steamcommunity.com/id/klimondra/" class="fa steam" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-steam"></i></a>        </div>
-        </div>
-        </div>
-
-    <!-- Kontaktuj mě-->
-
-    <div class="kontakt">
-        <h1>Kontaktuj mě zde!</h1>
-        <h2>Ať už potřebuješ s něčím pomoci, nebo chceš pokecat můžeš mi zde napsat! <br>Samozřejmě mi můžeš napsat na některou z mých sociálních sítí</h2>
-        <div class="kontaktkontejner"><button><a href="kontakt.html"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>  Kontakt</a></button></div>
-    </div>
-
-    <!-- Patička -->
-    <div class="footer">
-        <p class="patickatext">Tuto stránku naprogramoval pomocí HTML a CSS Klimondra v roce 2023.  Stránka nesbírá žádná uživatelská data.</p>
-    </div>
-    
     
 </body>
 </html>
