Landing Page update

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section id="Landing">
+        <div class="landContent">
+            <h1 class="HlavniNadpis">Klimondra</h1>
+            <p class="HlavniPodnadpis">Takovej nějakej programátor :D</p>
+            <div class="landBtns">
+                <button href="#" class="btnMajor">Kdo jsem?</a>
+                <button href="#" class="btnMinor">Projekty</a>
+            </div>
+        </div>
+    </section>
+    <section id="dalsi">
+
+    </section>
 </body>
 </html>
