Přidána sekce about me

--- a/index.html
+++ b/index.html
@@ -17,8 +17,21 @@
             </div>
         </div>
     </section>
-    <section id="dalsi">
-
+    <section id="aboutme">
+        <span class="part23">
+            <div class="aboutblock">
+                <h2 class="aboutnadpis">Kdo jsem?</h2>
+                <h3 class="aboutpodnadpis">PROGRAMÁTOR - TECH NADŠENEC - <s>DOKONALÝ ČLOVĚK</s></h3>
+                <p class="abouttext">Tady bude nějaký text. orem ipsum dolor sit amet, consectetuer 
+                    adipiscing elit. Curabitur vitae diam non enim vestibulum interdum.
+                    Nullam feugiat, turpis at pulvinar vulputate, erat libero tristique tellus,
+                    nec bibendum odio risus sit amet ante. Quis autem vel eum iure
+                    reprehenderit qui in ea voluptate velit esse quam nihil molestiae
+                    consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    Aliquam id dolor.</p>
+            </div>
+        </span>
+        <span class="part13"></span>
     </section>
 </body>
 </html>
