Responzivita sekce o mně

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
         </span>
         <span class="part13"></span>
     </section>
+    <section class="projekty">
+        <h1>nhj yd\s</h1>
+    </section>
 </body>
 </html>
