--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/2fe6cb1a76.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="Landing">
@@ -13,7 +14,7 @@
             <p class="HlavniPodnadpis">Takovej nějakej programátor :D</p>
             <div class="landBtns">
                 <button href="#" class="btnMajor">Kdo jsem?</a>
-                <button href="#" class="btnMinor">Projekty</a>
+                <button href="#" class="btnMinor">Sleduj mě</a>
             </div>
         </div>
     </section>
@@ -33,8 +34,33 @@
         </span>
         <span class="part13"></span>
     </section>
+    <!-- 
+
+    WIP: PROJEKTY
+
     <section class="projekty">
-        <h1>nhj yd\s</h1>
+        <h2>Projekty</h2>
+        <h3>VĚCI CO JSEM VYTVOŘIL</h3>
+    </section> 
+    
+    -->
+
+    <section class="followme">
+        <span class="part13"></span>
+        <span class="part23">
+            <div class="flwblock">
+                <h2 class="flwnadpis">Kde mě najít?</h2>
+                <h3 class="flwpodnadpis">MOJE SOCIÁLNÍ SÍTĚ</h3>
+            </div>
+            <div class="flwicons">
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-threads"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-reddit"></i></a>
+                <a href="#"><i class="fa-brands fa-twitch"></i></a>
+            </div>
+        </span>
     </section>
 </body>
 </html>
