Footer a Responzivita fllow sekce

--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
             </div>
         </span>
     </section>
+    <section class="footer">
+        <h4 class="footertext">Vyvtořil Klimondra s HTML & CSS & <i class="fa-solid fa-heart"></i></h4>
+    </section>
 </body>
 </html>
