--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </span>
     </section>
     <section class="footer">
-        <h4 class="footertext">Vyvtořil Klimondra s HTML & CSS & <i class="fa-solid fa-heart"></i></h4>
+        <h4 class="footertext">Vyvtořil Klimondra s HTML & CSS & <i class="fa-solid fa-heart"></i> v roce 2024</h4>
     </section>
 </body>
 </html>
