--- a/index.html
+++ b/index.html
@@ -135,13 +135,7 @@
             <div class="aboutblock">
                 <h2 class="aboutnadpis">Kdo jsem?</h2>
                 <h3 class="aboutpodnadpis">PROGRAMÁTOR - TECH NADŠENEC - <s>DOKONALÝ ČLOVĚK</s></h3>
-                <p class="abouttext">Tady bude nějaký text. orem ipsum dolor sit amet, consectetuer 
-                    adipiscing elit. Curabitur vitae diam non enim vestibulum interdum.
-                    Nullam feugiat, turpis at pulvinar vulputate, erat libero tristique tellus,
-                    nec bibendum odio risus sit amet ante. Quis autem vel eum iure
-                    reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                    consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-                    Aliquam id dolor.</p>
+                <p class="abouttext">Jsem student, který studuje programování a IT. Tenhle obor mě začal zajímat, když mi bylo asi 10 let. Tento web vznikl vlastně jenom proto, že jsem se nudil. Možná tu do budoucna přibyde více funkcí a zajímavostí. Kromě programování a technologií mě zajímá také politika, jak v ČR, tak v zahraničí. Proto také dávám na Instagram poměrně často různé politické memes a zprávy.</p>
             </div>
         </span>
         <span class="part13"></span>
