--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav class="navbar">
             <a id="navWhoBtn">Kdo jsem</a>
             <a id="navFlwBtn">Sociální sítě</a>
+            <a id="navBioBtn" href="bio-link.html">Linktree</a>
         </nav>
     
         <div class="menu-icon" id="menuIcon">
