--- a/projekty.html
+++ b/projekty.html
@@ -114,5 +114,8 @@
         </div>
     </div>
 </section>
+<section class="footer">
+    <h4 class="footertext">Vyvtořil Klimondra s HTML & CSS & <i class="fa-solid fa-heart"></i> v roce 2024</h4>
+</section>
 </body>
 </html>
