--- a/projekty.html
+++ b/projekty.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekty - Klimondra</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mainStyles.css">
     <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/brands.css">
     <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/solid.css">
     <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/fontawesome.css">
