Přidán odkaz na Printables
Took 29 minutes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a href="https://www.threads.net/@klimondra" target="_blank"><i class="fa-brands fa-brands1 fa-threads"></i></a>
                 <a href="https://www.tiktok.com/@klimondracz" target="_blank"><i class="fa-brands fa-brands1 fa-tiktok"></i></a>
                 <a href="https://github.com/Klimondra" target="_blank"><i class="fa-brands fa-brands1 fa-github"></i></a>
-                <a href="https://www.reddit.com/user/UnrealOndra/" target="_blank"><i class="fa-brands fa-brands1 fa-reddit"></i></a>
+                <a href="https://www.printables.com/@Klimondra_2716743" target="_blank"><img src="/otherAssets/myIcons/printables.svg" alt="Printable Icon" class="fa-brands1" /></a>
                 <a href="https://www.twitch.tv/klimondra" target="_blank"><i class="fa-brands fa-brands1 fa-twitch"></i></a>
             </div>
         </span>
