--- a/projekty.html
+++ b/projekty.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/solid.css">
     <link rel="stylesheet" href="otherAssets/fontawesome-free-icons/css/fontawesome.css">
     <script defer src="js/main.js"></script>
+    <meta http-equiv='refresh' content='0; URL=https://klimondra.imbus.org/'>
 </head>
 <body>
 <header class="header">
